--- a/InventoryTracker.csproj
+++ b/InventoryTracker.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="Agile Project.resx">
       <DependentUpon>Agile Project.cs</DependentUpon>
     </EmbeddedResource>
