--- a/InventoryTracker.csproj
+++ b/InventoryTracker.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddUser.Designer.cs">
+      <DependentUpon>AddUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Agile Project.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +106,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchaseOrdercs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PurchaseOrdercs.Designer.cs">
+      <DependentUpon>PurchaseOrdercs.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Agile Project.resx">
       <DependentUpon>Agile Project.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +133,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="PurchaseOrdercs.resx">
+      <DependentUpon>PurchaseOrdercs.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
