Added basic modify users

--- a/InventoryTracker.csproj
+++ b/InventoryTracker.csproj
@@ -86,6 +86,12 @@
     <Compile Include="Agile Project.Designer.cs">
       <DependentUpon>Agile Project.cs</DependentUpon>
     </Compile>
+    <Compile Include="Users.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Users.Designer.cs">
+      <DependentUpon>Users.cs</DependentUpon>
+    </Compile>
     <Compile Include="ItemReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     </Compile>
     <EmbeddedResource Include="Agile Project.resx">
       <DependentUpon>Agile Project.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Users.resx">
+      <DependentUpon>Users.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ItemReport.resx">
       <DependentUpon>ItemReport.cs</DependentUpon>
